src/main/parser/se/peopleandcode/rexxintellijplugin/gen/RexxParser.java
// This is a generated file. Not intended for manual editing.
package se.peopleandcode.rexxintellijplugin.gen;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static se.peopleandcode.rexxintellijplugin.gen.RexxTokens.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RexxParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, EXTENDS_SETS_);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return rexx_file(builder_, level_ + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADDITION_EXPR, ALIAS_EXPR, AND_EXPR, COMPARISON_EXPR,
      CONCATENATION_EXPR, EXPR, MULTIPLICATION_EXPR, POWER_EXPR,
      PREFIX_EXPR, TERM_EXPR),
    create_token_set_(ADDRESS_INSTRUCTION, ARG_INSTRUCTION, ASSIGNMENT_INSTRUCTION, CALL_INSTRUCTION,
      DO_INSTRUCTION, DROP_INSTRUCTION, EXIT_INSTRUCTION, EXPRESSION_INSTRUCTION,
      IF_INSTRUCTION, INSTRUCTION, ITERATE_INSTRUCTION, NOP_INSTRUCTION,
      NUMERIC_INSTRUCTION, PARSE_INSTRUCTION, PROCEDURE_INSTRUCTION, PULL_INSTRUCTION,
      RETURN_INSTRUCTION, SAY_INSTRUCTION, SELECT_INSTRUCTION, SIGNAL_INSTRUCTION,
      TRACE_INSTRUCTION, USE_INSTRUCTION),
  };

  /* ********************************************************** */
  // numericConstant | EQ position
  static boolean absolute_positional(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "absolute_positional")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = numericConstant(builder_, level_ + 1);
    if (!result_) result_ = absolute_positional_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // EQ position
  private static boolean absolute_positional_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "absolute_positional_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EQ);
    result_ = result_ && position(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // OPERATOR_PLUS | OPERATOR_SUBTRACT
  public static boolean additive_operator(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_operator")) return false;
    if (!nextTokenIs(builder_, "<additive operator>", OPERATOR_PLUS, OPERATOR_SUBTRACT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADDITIVE_OPERATOR, "<additive operator>");
    result_ = consumeToken(builder_, OPERATOR_PLUS);
    if (!result_) result_ = consumeToken(builder_, OPERATOR_SUBTRACT);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // ADDRESS expr
  public static boolean address_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "address_instruction")) return false;
    if (!nextTokenIs(builder_, ADDRESS)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ADDRESS);
    result_ = result_ && expr(builder_, level_ + 1, -1);
    exit_section_(builder_, marker_, ADDRESS_INSTRUCTION, result_);
    return result_;
  }

  /* ********************************************************** */
  // ARG template_list?
  public static boolean arg_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arg_instruction")) return false;
    if (!nextTokenIs(builder_, ARG)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ARG);
    result_ = result_ && arg_instruction_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, ARG_INSTRUCTION, result_);
    return result_;
  }

  // template_list?
  private static boolean arg_instruction_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arg_instruction_1")) return false;
    template_list(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // TOKEN_LEFT expression_list? TOKEN_RIGHT
  static boolean arguments(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arguments")) return false;
    if (!nextTokenIs(builder_, TOKEN_LEFT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, TOKEN_LEFT);
    result_ = result_ && arguments_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, TOKEN_RIGHT);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // expression_list?
  private static boolean arguments_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arguments_1")) return false;
    expression_list(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // name_declaration '=' expr
  public static boolean assignment_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_instruction")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASSIGNMENT_INSTRUCTION, "<assignment instruction>");
    result_ = name_declaration(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, EQ);
    result_ = result_ && expr(builder_, level_ + 1, -1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // CALL
  //     ( /*callon_spec
  //     |*/ (taken_constant /*| vref */) expression_list?
  //     )
  public static boolean call_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_instruction")) return false;
    if (!nextTokenIs(builder_, CALL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, CALL);
    result_ = result_ && call_instruction_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, CALL_INSTRUCTION, result_);
    return result_;
  }

  // (taken_constant /*| vref */) expression_list?
  private static boolean call_instruction_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_instruction_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = call_instruction_1_0(builder_, level_ + 1);
    result_ = result_ && call_instruction_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (taken_constant /*| vref */)
  private static boolean call_instruction_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_instruction_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = taken_constant(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // expression_list?
  private static boolean call_instruction_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "call_instruction_1_1")) return false;
    expression_list(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // normal_compare | strict_compare
  static boolean comparison_operator(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comparison_operator")) return false;
    boolean result_;
    result_ = normal_compare(builder_, level_ + 1);
    if (!result_) result_ = strict_compare(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // 'WHILE' whileexpr | 'UNTIL' untilexpr
  static boolean conditional(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conditional")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = conditional_0(builder_, level_ + 1);
    if (!result_) result_ = conditional_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // 'WHILE' whileexpr
  private static boolean conditional_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conditional_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "WHILE");
    result_ = result_ && whileexpr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // 'UNTIL' untilexpr
  private static boolean conditional_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "conditional_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "UNTIL");
    result_ = result_ && untilexpr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // NUMBER_DECIMAL
  public static boolean decimalConstant(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "decimalConstant")) return false;
    if (!nextTokenIs(builder_, NUMBER_DECIMAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, NUMBER_DECIMAL);
    exit_section_(builder_, marker_, DECIMAL_CONSTANT, result_);
    return result_;
  }

  /* ********************************************************** */
  // END name_declaration?
  static boolean do_ending(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_ending")) return false;
    if (!nextTokenIs(builder_, END)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, END);
    result_ = result_ && do_ending_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // name_declaration?
  private static boolean do_ending_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_ending_1")) return false;
    name_declaration(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // do_specification ncl
  //     instruction_list?
  //     do_ending
  public static boolean do_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_instruction")) return false;
    if (!nextTokenIs(builder_, DO)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DO_INSTRUCTION, null);
    result_ = do_specification(builder_, level_ + 1);
    pinned_ = result_; // pin = do_specification
    result_ = result_ && report_error_(builder_, ncl(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, do_instruction_2(builder_, level_ + 1)) && result_;
    result_ = pinned_ && do_ending(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // instruction_list?
  private static boolean do_instruction_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_instruction_2")) return false;
    instruction_list(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // DO /*[group_option+]*/
  //     ( dorep
  //     | conditional
  //     | dorep conditional
  //     )?
  static boolean do_specification(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_specification")) return false;
    if (!nextTokenIs(builder_, DO)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, DO);
    result_ = result_ && do_specification_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ( dorep
  //     | conditional
  //     | dorep conditional
  //     )?
  private static boolean do_specification_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_specification_1")) return false;
    do_specification_1_0(builder_, level_ + 1);
    return true;
  }

  // dorep
  //     | conditional
  //     | dorep conditional
  private static boolean do_specification_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_specification_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = dorep(builder_, level_ + 1);
    if (!result_) result_ = conditional(builder_, level_ + 1);
    if (!result_) result_ = do_specification_1_0_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // dorep conditional
  private static boolean do_specification_1_0_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "do_specification_1_0_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = dorep(builder_, level_ + 1);
    result_ = result_ && conditional(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // 'FORVER' | repetitor
  static boolean dorep(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dorep")) return false;
    boolean result_;
    result_ = consumeToken(builder_, "FORVER");
    if (!result_) result_ = repetitor(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // DROP expr
  public static boolean drop_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "drop_instruction")) return false;
    if (!nextTokenIs(builder_, DROP)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, DROP);
    result_ = result_ && expr(builder_, level_ + 1, -1);
    exit_section_(builder_, marker_, DROP_INSTRUCTION, result_);
    return result_;
  }

  /* ********************************************************** */
  // ncl ELSE ncl? (instruction | END)
  static boolean else_$(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "else_$")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = ncl(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ELSE);
    result_ = result_ && else_2(builder_, level_ + 1);
    result_ = result_ && else_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ncl?
  private static boolean else_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "else_2")) return false;
    ncl(builder_, level_ + 1);
    return true;
  }

  // instruction | END
  private static boolean else_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "else_3")) return false;
    boolean result_;
    result_ = instruction(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, END);
    return result_;
  }

  /* ********************************************************** */
  // EXIT expr?
  public static boolean exit_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "exit_instruction")) return false;
    if (!nextTokenIs(builder_, EXIT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EXIT);
    result_ = result_ && exit_instruction_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, EXIT_INSTRUCTION, result_);
    return result_;
  }

  // expr?
  private static boolean exit_instruction_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "exit_instruction_1")) return false;
    expr(builder_, level_ + 1, -1);
    return true;
  }

  /* ********************************************************** */
  // EXPOSE variable_list
  static boolean expose(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "expose")) return false;
    if (!nextTokenIs(builder_, EXPOSE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EXPOSE);
    result_ = result_ && variable_list(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // &IDENTIFIER expr
  //     | &stringLiteral expr
  public static boolean expression_instruction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "expression_instruction")) return false;
    if (!nextTokenIs(builder_, "<expression instruction>", IDENTIFIER, STRING)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, EXPRESSION_INSTRUCTION, "<expression instruction>");
    result_ = expression_instruction_0(builder_, level_ + 1);
    if (!result_) result_ = expression_instruction_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // &IDENTIFIER expr
  private static boolean expression_instruction_0(PsiBuilder builder_, int level_) {
